styles/index.css
.input-card {
  margin: 64px auto;
  width: 55vw;
  padding: 24px;
  box-shadow:
   rgba(158, 158, 158, 0.09) 0 26px 26px,
   rgba(158, 158, 158, 0.1) 0 7px 15px;
   border-radius: 8px;
   border-top: 2px solid rgba(0, 0, 0, 1);
}

.question-card1,
.question-card2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;

}


.hidden {
  display: none;
}

.fade-out {
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
  pointer-events: none;
}

.fade-in {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
}

.question-card-number {
  align-self: baseline;
  color: rgba(0, 0, 0, 0.2);
}

.question-card-prompt {
  font-weight: 500;
  line-height: 135%;
  letter-spacing: -5%;
  margin-top: 8px;
}
.question-card-prompt2 {
  color: rgba(0, 0, 0, 0.2);
}



.years-counter {
  color: black;
  font-size: 18px;
  border: 1px black solid;
  padding: 9px 3px;
  width: 52px;
  border-radius: 8px;
  margin: 16px 0;
  text-align: center;
}

.years-selector {
  appearance: none;

  height: 6px;  
  background: #dedede;  
  border-radius: 3px;  
  outline: none;
  cursor: pointer;
  accent-color: black;
}

.years-error-message {
  color: red;
  font-size: 14px;
  margin: 4px 0;
  height: 14px;
}

.years-continue-button,
.goals-continue-button {
  background-color: rgba(0, 0, 0, 1);
  padding: 8px 34px;
  border-radius: 8px;
  border: none;
  cursor: pointer;
  margin-top: 32px;
}

/* GOALS CARD */

.goals-list {
  list-style: none;
  display: flex;
  width: 100%;
  flex-direction: column;
  gap: 8px;
  max-height: 240px;
  overflow-y: scroll;
  text-align: left;
  margin: 16px 0 0;
  padding: 0 4px 0 0;
  
  -ms-overflow-style: none;       
}

.goals-list::-webkit-scrollbar,
.goals-list-main::-webkit-scrollbar,
.task-list::-webkit-scrollbar {
  width: 10px;
  background: transparent;
}


.goals-list::-webkit-scrollbar-thumb,
.goals-list-main::-webkit-scrollbar-thumb,
.task-list::-webkit-scrollbar-thumb {
  background-color: rgb(83, 83, 83);
  border-radius: 8px;
  border: 2px solid transparent;
  background-clip: content-box;
}

.goals-list::-webkit-scrollbar-corner,
.goals-list-main::-webkit-scrollbar-corner,
.task-list::-webkit-scrollbar-corner{
  background: transparent;
}

.goals-list,
.goals-list-main,
.task-list {

  scrollbar-width: thin; 
  scrollbar-color: rgb(83, 83, 83) transparent;
}

.goals-list li {
  border: rgba(0, 0, 0, 1) solid 1px;
  padding: 8px;
  border-radius: 8px;
  word-wrap: break-word;
}

.goals-error-message {
  color: red;
  font-size: 14px;
  height: 14px;
}

.add-goals-button {
  border: none;
  cursor: pointer;
  margin-top: 21px;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.2);
  backdrop-filter: blur(6px); 
  -webkit-backdrop-filter: blur(6px);
  z-index: 3;
  transition: opacity 0.3s ease;
}

.goals-modal {
  margin: 300px auto;
  width: fit-content;
  display: flex;
  gap: 8px;

}

.modal-input {
  padding: 8px;
  border-radius: 8px;
  border: solid 2px;
  z-index: 100;
}

.modal-input:focus {
  outline: none;
}

.add-button {
  background-color: rgba(0, 0, 0, 1);
  border: none;
  border-radius: 8px;
  padding: 8px 11px;
}


/* TIMER SECTION */


.countdown-timer-section{
  background-color: rgba(33, 33, 33, 1);
  display: flex;
  gap: 24px;
  width: fit-content;
  padding: 24px 48px;
  border-radius: 8px;
  margin: 64px auto 0;
  box-shadow: 
    rgba(0, 0, 0, 0.1) 0 6px 14px,
    rgba(0, 0, 0, 0.09) 0 25px 25px
  ;
}

.time-unit {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4px;
}

.time-value {
  color: rgba(255, 255, 255, 1);
  font-size: 28px;
  font-weight: 500;

  line-height: 100%;
  letter-spacing: -3%;

}

.time-unit small {
  color: rgba(255, 255, 255, 0.5);
  font-weight: 500;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: -3%;
}

/* POMODORO SECTION */

.timer {
  background-color: rgba(33, 33, 33, 1);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 24px;
  padding: 24px 48px;
  border-radius: 8px;
  box-shadow: 
    rgba(0, 0, 0, 0.1) 0 6px 14px,
    rgba(0, 0, 0, 0.09) 0 25px 25px
  ;
  padding: 24px 48px;
  width: 100%;
}

.timer-seperator {
  font-size: 36px;
  color: var(--base-600);
}

.timer-content {
  display: flex;
  flex-direction: column;
  margin: 64px auto;
  width: fit-content;
  align-items: center;
}


.content-heading {
  font-weight: 600;
  border-top: 1px solid rgba(64, 64, 64, 1);
  border-bottom: 1px solid rgba(64, 64, 64, 1);
  text-align: center;
  padding: 12px;
  box-shadow: 
    2px 4px 11px rgba(0, 0, 0, 0.1),
    7px 18px 19px rgba(0, 0, 0, 0.09),
    16px 40px 26px rgba(0, 0, 0, 0.05),
    28px 71px 31px rgba(0, 0, 0, 0.01)
  ;
  margin-top: 86px;
}

.pomodoro-timer-button-list {
  display: flex;
  list-style: none;
  gap: 8px;
  margin: 24px 0;
}

.timer-button {
  padding: 8px 16px;
  border: none;
  background: transparent;
  font-weight: 600;
  cursor: pointer;
}

.timer-is-toggled {
  color: white;
  background-color: var(--contrast-500);
  border-radius: 8px;
  padding: 8px 16px;
}

.pomodoro-start-button {
  background-color: var(--contrast-100);
  color: white;
  font-size: 16px;
  padding: 12px 41px;
  border: none;
  border-radius: 8px;
}

.pomodoro-action-buttons {
  display: flex;
  align-items: center;
  transition: all 5s ease;
}

.reset-button {
  background-color: rgba(33, 33, 33, 1);
  border: solid 1px rgba(125, 125, 125, 0.17);
  border-radius: 8px;
  padding: 7px 10px;
  margin-left: 24px;
  transition: display 2s ease, margin 1.5s ease;
}

.reset-button img {
  display: block;
}

.play {
  background-color: rgba(33, 33, 33, 1);
  border: 1px solid rgba(125, 125, 125, 0.17);
  border-radius: 8px;
  padding: 8px 11px;
}

.play img {
  display: block;
}

.play.stop img{
  content: url(/images/lightmode-pause.svg);
}

/* GOALS SECTION */
.goals-content,
.task-content {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin: 32px auto;
  width: fit-content;
  align-items: end;
}

.goals-list-main,
.task-list {
  background-color: var(--contrast-500);
  color: white;
  padding: 16px;
  width: 395px;
  height: 240px;
  overflow-y: scroll;
  word-wrap: break-word;
  border: none;
  border-radius: 8px;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 16px;

  -ms-overflow-style: none;       
}


.goals-main-checkbox,
.task-checkbox {
  -webkit-appearance: none;
  appearance: none;
  width: 16px;
  height: 16px;
  border-radius: 4px;
  background-color: #b3b3b3;
  border: 2px solid #666; 
  position: relative;
  cursor: pointer;
  transition: all 0.2s ease;
}

.goals-main-checkbox:checked,
.task-checkbox:checked {
  background-color: white;
  border: 2px solid white;
}

.goals-main-checkbox:checked::after,
.task-checkbox:checked::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 10px;
  height: 8px;
  background-image: url('/images/checkicon.svg');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  transform: translate(-50%, -50%);
}

.add-goals-button-main,
.task-add-button {
  background-color: var(--contrast-100);
  color: white;
  border: none;
  border-radius: 8px;
  padding: 8px 16px;
  cursor: pointer;
}

.todo-item-left-section {
  display: flex;
  align-items: center;
  gap: 10px;
}
.task-item,
.goals-item {
  display: flex;
  justify-content: space-between;
}

.todolist-delete-button {
  background-color: rgb(196, 0, 0);
  color: rgb(232, 232, 232);
  border: none;
  padding: 4px;
  border-radius: 4px;
  cursor: pointer;
}

.todolist-delete-button:hover {
  transform: scale(1.05);
}

.todolist-delete-button:active {
    background-color: rgb(181, 0, 0);
}

/* DARK MODE  */

.timer.dark-mode,
.countdown-timer-section.dark-mode,
.content-heading.dark-mode,
.main-heading.dark-mode{
  background-color: rgba(41, 41, 41, 1);
}

.settings-image.dark-mode {
  content: url(/images/darkmode-settings.png);
}

.pomodoro-timer-button-list li .timer-button.dark-mode {
  color: rgba(255, 255, 255, 0.559);
}

.pomodoro-timer-button-list li .timer-is-toggled.dark-mode {
  color: rgba(41, 41, 41, 1);
  background-color: rgb(255, 255, 255);
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;
}

